--- a/httpd-vhosts.template
+++ b/httpd-vhosts.template
@@ -2,7 +2,7 @@
     DocumentRoot $WEB_ROOT
 
     <Directory $WEB_ROOT>
-        DirectoryIndex /index.php index.php
+        DirectoryIndex index.html index.php
         Options +FollowSymLinks
         AllowOverride All
         Require all granted
